      trying to read instead of giving up. TRQ-1091.
  b - Backported revision 6750 from 3.0-fixes to fix TRQ-1137. This fixed a problem where all 
      jobs get deleted if Moab is configured with SYNCJOBID=TRUE and ROOTPROXYJOBSUBMISSION 
      set in the RMCFG flags.
  b - Fixed potential NULL pointer dereferences in insert_link, parse_equal_string and
      MXMLSetChild.

2.5.12
  b - Fix so child pbs_mom does not remain running after qdel on slow starting job.
      TRQ-860. (backported from 4.0.1)
  b - Fix so pbs_mom won't segfault after a qdel is done for a job that is still
      running the prologue. TRQ-832. (backported from 4.0.1)
  b - Added code from 3.0-fixes which fixes a problem with procct getting up to Moab.
      3.0-fixes revision 5941
  b - Fix so qrun jobid[] does not cause pbs_server segfault. TRQ-865. (backported from 4.0.2)
  b - Fix to validate qsub -l nodes=x against resources_max.nodes the same as v2.4.
      TRQ-897. (backported from 4.0.2)
  e - Allow pbs_mom to change users group on stderr/stdout files. Enabled by configuring
      Torque with CFLAGS='-DRESETGROUP'. TRQ-908. (backported from 4.0.2)
  b - Fix so gpu count gets written out to server nodes file when using
      --enable-nvidia-gpus. TRQ-927. (backported from 4.0.2)
  b - fixed a memory leak on the MOM when running with --enable-nvidia-gpus. TRQ-904
  b - fix server crash caused by gpu mode not being right after gpus=x:. TRQ-948.
      (backported from 4.0.3)
  e - add the mom config option exec_with_exec. When set to true, the pbs_mom will exec 
      the job script instead of piping it to stdin. This makes signal trapping easier 
      because the shell doesn't have to be configured to trap the signal as well.

2.5.11
  b - fix for writing too much data when job_script is saved to job log. (backported from 3.0.5)
  b - fix for where pbs_mom would not automatically set gpu mode. (backported from 3.0.5)